# Gandalf-bot-v1.2-BETA

./: README.md  main.py  mydata.py  mymodule.py  pyproject.toml  test.md
